--- a/pom.xml
+++ b/pom.xml
@@ -1,17 +1,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>optispire</groupId>
-    <artifactId>optispire</artifactId>
-    <name>Optispire</name>
+    <groupId>ramsaver</groupId>
+    <artifactId>ramsaver</artifactId>
+    <name>Ram Saver</name>
     <version>0.0.0</version>
-    <description>Reduces how much RAM Slay the Spire uses. Primarily aimed at managing when images are loaded.</description>
+    <description>Reduces how much RAM Slay the Spire uses. Primarily aimed at managing when images are loaded. Can and will worsen performance in exchange for saving RAM.</description>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <SlayTheSpire.version>11-30-2020</SlayTheSpire.version>
-        <ModTheSpire.version>3.18.0</ModTheSpire.version>
+        <SlayTheSpire.version>12-18-2022</SlayTheSpire.version>
+        <ModTheSpire.version>3.30.0</ModTheSpire.version>
         <Steam.path>C:/Program Files (x86)/Steam/steamapps</Steam.path>
     </properties>
 
@@ -45,6 +45,13 @@
             <version>5.19.0</version>
             <scope>system</scope>
             <systemPath>${Steam.path}/workshop/content/646570/1605833019/BaseMod.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>downfall</groupId>
+            <artifactId>downfall</artifactId>
+            <version>0.0.0</version>
+            <scope>system</scope>
+            <systemPath>${Steam.path}/workshop/content/646570/1610056683/downfall.jar</systemPath>
         </dependency>
     </dependencies>
 
@@ -84,9 +91,6 @@
         </plugins>
 
         <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-            </resource>
             <resource>
                 <directory>src/main/resources</directory>
                 <filtering>false</filtering>
